--- a/src/llm_interfaces/CMakeLists.txt
+++ b/src/llm_interfaces/CMakeLists.txt
@@ -13,6 +13,7 @@ find_package(ament_cmake REQUIRED)
 
 find_package(geometry_msgs REQUIRED)
 find_package(std_msgs REQUIRED)
+find_package(std_srvs REQUIRED)
 find_package(sensor_msgs REQUIRED)
 find_package(object_detector_tensorflow_interfaces REQUIRED)
 find_package(rosidl_default_generators REQUIRED)
@@ -25,6 +26,7 @@ set(DEPENDENCIES
   "geometry_msgs"
   "aip_grasp_planning_interfaces"
   "aip_packing_planning_interfaces"
+  "std_srvs"
 )
 #  "object_detector_tensorflow_interfaces"
 
