--- a/.gitignore
+++ b/.gitignore
@@ -2,6 +2,8 @@
 .idea/
 .vscode/
 src/pkg_website_llm/pkg_website_llm/static/Hintergrund.png
+src/pkg_website_llm/pkg_website_llm/static/PackPlanBild.png
+src/pkg_website_llm/pkg_website_llm/WebsiteFeedback.json
 
 # Byte-compiled / optimized / DLL files
 __pycache__/
